topic text wrapping fix

--- a/source/stylus/style.styl
+++ b/source/stylus/style.styl
@@ -835,6 +835,7 @@ Topic
     color #3f4242
     font 15px $baseFontFamily
     line-height 23px
+    word-wrap break-word
 
 .topic-description 
     color #3f4242
@@ -2109,7 +2110,7 @@ interface
 			
 			a
 				display block
-				background $lightGradient
+				background #fff
 				color #676767
 				font 15px $baseFontFamily
 				padding 5px
@@ -2117,8 +2118,16 @@ interface
 					background $orangeGradient
 					color #fff
 					
-					
-			
+.b-user-interface-tab-item__item
+	//
+	.input-default
+		button-default()
+		width 190px
+		color $baseFontColorLight
+		font 15px $baseFontFamily
+		padding-left 10px
+		background #fff
+		
 
 
 /*
